2008-06-02  Miguel de Icaza  <miguel@novell.com>
	
	* HttpRuntime.cs: Thanks to Christian Hergert for finding this
	one.  

	Do not throw NIEX on IsOnUNCShare, instead compute the value. 

2008-05-30  Marek Habersack  <mhabersack@novell.com>
	
	* HttpApplication.cs, HttpCachePolicy.cs, SiteMapProvider.cs,
	TraceContext.cs: do not use synthetized event accessors (to avoid
	locks).

2008-05-19 Noam Lampert <noaml@mainsoft.com>

        * HttpServerUtility.cs: Fix bug in UrlPathEncode when URL contains '?' 

2008-05-12 Noam Lampert <noaml@mainsoft.com>

        * HttpApplication.cs: Fix regressions introduced by latest commit

2008-05-07 Gonzalo Panigua Javier <gonzalo.mono@gmail.com>

	* HttpApplication.cs: create a fake context while loading the
	modules on the first request so that the modules don't mess up
	with the actual output of that request.

2008-05-07  Marek Habersack  <mhabersack@novell.com>

	* HttpRequest.cs: StripPath should handle UNC paths too. Fixes bug
	#385870. Patch from Ivan Hamilton <ivan@chimerical.com.au>,
	thanks!

2008-05-06  Marek Habersack  <mhabersack@novell.com>

	* MimeTypes.cs: mime type keys might not exist in the dictionary,
	in the 2.0 profile. Patch from Rolf Kvinge <rkvinge@novell.com>
	and Jean-Baptiste Evain <jbevain@novell.com>, thanks! Fixes bug
	#386008

2008-04-30  Marek Habersack  <mhabersack@novell.com>

	* HttpApplication.cs: when the Start method is called in a new
	thread, the thread's culture and ui culture are set to their
	defaults, thus ignoring whatever their values were in the parent
	thread. This is now fixed by passing an array containing the
	culture values to the Start method, so that the new thread can be
	properly initialized. Fixes bug #323566

	* SiteMapNode.cs: the implicitResourceKey parameter to one of the
	constructors sets the value of the ResourceKey property.
	GetImplicitResourceString uses the provider's ResourceKey as the
	global resource object key and the node's ResourceKey to construct